--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,11 @@
     background-color:white;
   }
 }
+@media screen and (min-width: 600px) {
+  header {
+    font-size: 35px;
+  }
+  body{
+    background-color:yellow;
+  }
+}
