--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,53 @@
+  /*
+  perfect fourth
+  https://www.modularscale.com/?1&em&1.333
+  */
+  
+  
   body{
     font-family:'ZCOOL XiaoWei',Lucida Console, serif;;
-    background-color:red;
+    background-color:aquamarine;
 }
   label{
     font-weight: bold;
 }
   #deev{
     text-align: center;
-    padding:50px;
-    border: 15px double;
-    border-radius:10px;
-    margin:25px;
-    font-size:25px;
+    padding:1.777em;
+    border: 1em double;
+    border-radius:1em;
+    margin:1.777em;
+    font-size:2.369em;
 }
   input{
     text-align:center;
-    padding:25px;
+    padding:2.396em;
     width:90%;
-    border:double 5px;
-    border-radius:5px;
+    border:double .563em;
+    border-radius:.563em;
 }
   header{
     text-align:center;
-    font-size:45px;
-    padding:25px;
+    font-size:3.157em;
+    padding:1em;
     font-weight: bold;
 }
   #tphone{
-    margin:15px;
+    margin:1.333em;
 }
   #bday{
-    margin:15px;
+    margin:1.333em;
 }
   #email{
-    margin:15px;
+    margin:1.333em;
 }
   #butt{
     background-color:white;
-    border:5px double;
-    margin:25px;
+    border:.563em double;
+    margin:1.333em;
     font-weight: bold;
-    font-size:25px;
-    padding:25px;
+    font-size:1.333em;
+    padding:1.333em;
 }
 @media screen and (min-width: 600px){
   body{
@@ -52,38 +58,38 @@
   }
   #deev{
     text-align: center;
-    padding:50px;
-    border: 15px double;
-    border-radius:10px;
-    margin:25px;
-    font-size:15px;
+    padding:2.369em;
+    border: 1.333em double;
+    border-radius:1em;
+    margin:1.333em;
+    font-size:1.333em;
   }
   input{
     text-align:center;
-    padding:5px;
-    width:500px;
-    border:double 5px;
-    border-radius:5px;
+    padding:.563em;
+    width:23.612em;
+    border:double .563em;
+    border-radius:.563em;
   }
   header{
     text-align:center;
-    font-size:45px;
-    padding:25px;
+    font-size:4.209em;
+    padding:1.333em;
     font-weight: bold;
   }
   #tphone{
-    margin:15px;
+    margin:1.333em;
   }
   #bday{
-    margin:15px;
+    margin:1.333em;
   }
   #email{
-    margin:15px;
+    margin:1.333em;
   }
   #butt{
     background-color:aquamarine;
-    border:5px double;
-    margin:25px;
+    border:.563em double;
+    margin:1.333em;
     font-weight: bold;
   }
   #butt:hover{
@@ -92,9 +98,9 @@
 }
 @media screen and (min-width: 1100px) {
   header {
-    font-size: 35px;
+    font-size: 5.61em;
   }
   body{
-    background-color:yellow;
+    background-color:aquamarine;
   }
 }
